<resources>
    <string name="app_name">e救援服务商</string>
    <string name="app_serve">e救援服务商服务</string>
    <string name="label_main_menu1">工作</string>
    <string name="label_main_menu2">订单</string>
    <string name="label_main_menu3">我的</string>
    <string name="label_main_menu4">更多</string>
    <string name="label_main_menu5">公告</string>
    <string name="label_main_menu6">关于e救援</string>
    <string name="label_main_menu7">e救援微信公众号</string>
    <string name="label_main_menu8">我的位置</string>
    <string name="label_record">已接订单</string>
    <string name="label_start_order_order">出发救援</string>
    <string name="label_push">推送订单</string>
    <string name="label_more_aboutus">联系我们</string>
    <string name="label_more_aboutus2">关于我们</string>
    <string name="label_QR_code">e救援公众号二维码</string>
    <string name="label_handbook">服务商操作手册 </string>
    <string name="label_ehelp">e救援</string>
    <string name="label_ehelp_QR">微信号：auto-sos</string>
    <string name="label_QR_QR">没有关注e救援微信公众号的车主\n可以扫一扫上面的二维码加以关注</string>
    <string name="label_QR_QR_QR">扫一扫关注e救援微信公众号</string>
    <string name="label_more_public">公告</string>
    <string name="label_more_cherkVersion">正在检测新版本...</string>
    <string name="label_more_version">e救援服务商_v%s</string>
    <string name="label_more_aboutEhelp">关于e救援</string>
    <string name="label_more_postIdeas">意见反馈</string>
    <string name="label_more_updateVersion">版本更新</string>
    <string name="label_telephone_number">400-882-0019</string>
    <string name="label_support">4008820019</string>
    <string name="label_app">e救援</string>
    <string name="label_login">登录</string>
    <string name="label_nifinish">未完成</string>
    <string name="label_login_hint">请输入您的账号</string>
    <string name="label_login_hint2">请输入您的密码</string>
    <string name="label_order">接单</string>
    <string name="label_handbook_tuoche">拖车手册</string>
    <string name="label_handbook_nottuoche">搭电/换胎手册</string>
    <string name="label_address">地址:</string>
    <string name="label_m">公里</string>
    <string name="label_setting">设置</string>
    <string name="label_pointed">指派</string>
    <string name="label_setting_password">修改密码</string>
    <string name="label_setting_sound">声音开关</string>
    <string name="label_continue">继续接单</string>
    <string name="label_prepare_order">预约</string>
    <string name="label_driver">车主</string>
    <string name="label_minute">分钟</string>
    <string name="label_order_info">已抢到的订单</string>
    <string name="label_stop_order">停止接单</string>
    <string name="label_start_order">开始接单</string>
    <string name="label_order_finish">订单完成</string>
    <string name="label_dan">单</string>
    <string name="label_telephone"><Data><![CDATA[ <font color="#feb96a">400-882-0019</font>]]></Data></string>
    <string name="label_get">接</string>
    <string name="label_distance">距</string>
    <string name="label_else">备注：</string>
    <string name="label_kilometre">公里</string>
    <string name="label_city">宁波</string>
    <string name="label_city2">宁波理工</string>
    <string name="label_state_desc">已接单</string>
    <string name="label_kilometre1">已行驶公里数</string>
    <string name="label_rmb_s">%s元</string>
    <string name="label_kilometre_s">%s公里</string>
    <string name="label_kilometre_drag">公里</string>
    <string name="label_phone_number">(%s)</string>
    <string name="label_edit">修改</string>
    <string name="label_start_nav">启用导航</string>
    <string name="label_rescued">已到救援现场</string>
    <string name="label_arrived_wantPay">请拍照并支付</string>
    <string name="label_fee">拖车计费</string>
    <string name="label_rmb">元</string>
    <string name="label_type_fee">输入里程</string>
    <string name="label_submit_fee">确认拖车费用</string>
    <string name="label_sure_fee">确认收费</string>
    <string name="label_get_fee">请向车主收取现金</string>
    <string name="label_pay">确认收费</string>
    <string name="label_drag">拖车计费</string>
    <string name="label_drag_fininsh">确认完成拖车？</string>
    <string name="label_carer_payed">车主已现金支付</string>
    <string name="label_personne">个人中心</string>
    <string name="label_logout">退出登录</string>
    <string name="label_receive_fee">收到救援费用</string>
    <string name="label_total">累计接单</string>
    <string name="label_total_cost">累计收费</string>
    <string name="label_comment">评分</string>
    <string name="label_comments">分</string>
    <string name="label_rank">接单排行</string>
    <string name="label_view_records">查看接单记录</string>
    <string name="label_view_notice">查看</string>
    <string name="label_view_notice_no">不看</string>
    <string name="label_view_nofinish">继续</string>
    <string name="label_ok2">好的</string>
    <string name="label_view_nofinish2">休息下</string>
    <string name="label_records">接单记录</string>
    <string name="label_upload_photo">上传照片</string>
    <string name="label_save">保存</string>
    <string name="label_return">返回</string>
    <string name="label_seting">设置</string>
    <string name="label_account">账户余额</string>
    <string name="label_statement_fee">费用详情</string>
    <string name="label_draw_cash">提现</string>
    <string name="label_fill_code">填写验证码</string>
    <string name="label_account_month">月账单</string>
    <string name="label_statement_month">月结算报表</string>
    <string name="label_seting_mobile">修改手机号</string>
    <string name="txt_getMsgCode_validate">重新发送</string>
    <string name="label_account_statement">结算报表</string>
    <string name="label_seting_password">修改密码</string>
    <string name="label_record_info">接单详情</string>
    <string name="label_choose_ok">完成选取(%s)</string>
    <string name="label_choose_setting">开启</string>
    <string name="label_choose_photo">选择照片</string>
    <string name="label_ok">完成</string>
    <string name="label_quit">再按一次可以退出e救援服务商</string>
    <string name="label_service_type1">搭电</string>
    <string name="label_service_type2">换胎</string>
    <string name="label_service_type3">拖车</string>
    <string name="label_service_type4">快修</string>
    <string name="label_no_map">手机未安装地图软件，无法进行导航</string>
    <string name="label_view_available">去接订单</string>
    <string name="label_current_place">%s附近</string>
    <string name="label_location_failed">定位失败，启用上次定位结果</string>
    <string name="label_confirm">确定</string>
    <string name="label_close">关闭</string>
    <string name="label_cancel">取消</string>
    <string name="label_debug">当前版本为测试版本~</string>
    <string name="label_time_counter">本次在线时长：%s</string>
    <string name="label_comment_count">评分</string>
    <string name="label_detail">明细</string>
    <string name="label_view_photos">查看照片</string>
    <string name="label_continue_work">继续接单</string>
    <string name="label_pay_second">代车主支付</string>
    <string name="label_owner_cash">车主要求现金支付</string>
    <string name="label_owner_payed">车主已支付救援费用</string>
    <string name="label_not_owner_payed">车主已确认本次救援服务</string>
    <string name="label_server_pay_ok">您已成功代车主支付</string>
    <string name="label_photo_list">浏览照片</string>
    <string name="label_notice">公告</string>
    <string name="label_notice_info">公告详情</string>
    <string name="label_order_finished">救援完成</string>
    <string name="label_car_fee_service1">起步价（%s公里内）</string>
    <string name="label_car_fee_real">总费用</string>
    <string name="label_baoxian">免费%s公里</string>
    <string name="label_car_fee_service2">%s元</string>
    <string name="label_car_fee_service3">实际拖车公里数</string>
    <string name="label_car_fee_service4">%s公里</string>
    <string name="label_car_fee_service5">超出费用</string>
    <string name="label_carDrag_start">开始拖车</string>
    <string name="label_carDrag_stop">完成拖车</string>
    <string name="label_view_comment">查看评论</string>
    <string name="label_no_more">— 没有更多订单了 —</string>
    <string name="label_fee2">拖车\n计费</string>
    <string name="label_upload_photo1">拍照\n上传</string>
    <string name="label_upload_photo2">拍照上传</string>
    <string name="label_comment_finished">完成\n订单</string>
    <string name="label_pay_second1">确认\n收费</string>
    <string name="label_order_confirm">订单完成</string>
    <string name="label_order_pushed">已推送</string>
    <string name="label_version">v%s</string>
    <string name="hint_phone">手机号</string>
    <string name="hint_password">密码</string>
    <string name="hint_post_add_images">请添加照片</string>
    <string name="hint_choose_photo_limit_out">选择的照片数量已经超过限制</string>
    <string name="hint_type_distance">拖车行驶公里数</string>
    <string name="msg_notice">您有新消息啦！</string>
    <string name="msg_pay_by_other">您有新消息啦！</string>
    <string name="msg_order_null">手慢了，订单已经被接走啦!</string>
    <string name="msg_distance_error">（请刷新）</string>
    <string name="msg_nofinish">当前有订单未完成！</string>
    <string name="msg_reloction">经纬度定位失败，是否重新定位？</string>
    <string name="msg_noInterner">网络连接错误，请检查你的网络！</string>
    <string name="msg_enter_psd">请输入原始密码！</string>
    <string name="msg_enter_cash">请输入金额！</string>
    <string name="msg_enter_cash_success">提现申请提交成功！</string>
    <string name="msg_enter_bank_id_null">您的银行卡信息不完整，请联系客服！</string>
    <string name="msg_enter_cash_failed">提现失败！</string>
    <string name="msg_enter_no_cash">账户余额不足，无法提现！</string>
    <string name="msg_psd_error1">新密码不能为空！</string>
    <string name="msg_psd_error2">两次密码输入不一致！</string>
    <string name="msg_psd_error3">密码长度不能低于6位！</string>
    <string name="msg_psd_error4">新旧密码一样就不要改了吧~</string>
    <string name="msg_psd_succeed">密码修改成功，请重新登录！</string>
    <string name="msg_psd_falied">密码修改失败，请联系客服人员！</string>
    <string name="msg_noGPS">定位服务未打开,请手动将其打开！</string>
    <string name="msg_notGPS">GPS模式未打开,请手动将其打开！</string>
    <string name="msg_delect_pic">重复图片已经自动清除</string>
    <string name="msg_stop_order">确定停止接单？</string>
    <string name="msg_username_empty">手机号不能为空</string>
    <string name="msg_password_empty">密码不能为空</string>
    <string name="msg_preparing">正在准备数据</string>
    <string name="msg_order_order">预约时间%s</string>
    <string name="msg_submitting">正在提交</string>
    <string name="msg_choose_photo">请选择照片进行上传</string>
    <string name="msg_order_empty">当前还没有人需要救援，请耐心哦</string>
    <string name="msg_notice_empty">当前没有公告</string>
    <string name="msg_bill_empty">当前没有账单明细</string>
    <string name="msg_record_empty">没有历史接单记录</string>
    <string name="msg_push_empty">没有历史推送记录</string>
    <string name="msg_photo_empty">没有照片上传记录</string>
    <string name="msg_net_disconnected">网络没有连接</string>
    <string name="msg_new_order">快看，有新订单啦~</string>
    <string name="msg_order_uploading">上传照片中...</string>
    <string name="msg_ok_tuoche">是否完成拖车？</string>
    <string name="msg_ok_tijiao">是否提交提现申请？</string>
    <string name="msg_update">当前有新版本，是否立即更新？</string>
    <string name="msg_can_update">发现可用的新版本，是否马上升级？</string>
    <string name="msg_update_content">更新内容：</string>
    <string name="msg_update_must">当前有新版本，为了您的用户体验，请立即更新！</string>
    <string name="msg_handbook">请选择要查看的手册</string>
    <string name="msg_download">下载完成，是否立即更新？</string>
    <string name="msg_noupdate">当前已经是最新版本！</string>
    <string name="msg_pay_error">支付异常</string>
    <string name="msg_update_cancel">不更新程序可能无法正常使用，程序将关闭</string>
    <string name="msg_update_error">下载出现异常，请退出后重试。</string>
    <string name="msg_ok_arrive">确定已到救援现场？</string>
    <string name="msg_order_arrive">确定开始预约订单？</string>
    <string name="msg_pay_ok">已收到车主的救援费用</string>
    <string name="msg_logout">确定退出登录？</string>
    <string name="msg_callus">400-882-0019</string>
    <string name="msg_pay_success">支付成功</string>
    <string name="msg_pay_fail">支付软件未打开，请重试！</string>
    <string name="msg_pay_cancel">用户取消支付</string>
    <string name="msg_exit_after_change_host">修改地址后请退出应用重新打开</string>
    <string name="msg_auth_error">您的账号在其他地方登陆\n \n请重新登陆!</string>
    <string name="msg_drag_ok">拖车完成，车主需支付</string>
    <string name="msg_internet_error">当前网络未打开\n请开启网络后重试！</string>
    <string name="msg_login_ucid_errer">您的uid有异常~</string>
    <string name="msg_pls_wait">待用户确认完成救援</string>
    <string name="msg_drag_repain">正在重新绘制轨迹，请耐心等待！</string>
</resources>