<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onDismiss"
    tools:context=".view.CarFeeActivity">

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/color_black1"
        android:textSize="@dimen/large_text_size" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:text="0"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/xxxx_huge_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/price"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/price"
        android:text="@string/label_rmb"
        android:textColor="@color/color_black1"
        android:textSize="@dimen/medium_text_size3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/color_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/label_detail"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/medium_text_size2" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/color_line" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/drag_start_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_car_fee_service1"
                android:textColor="@color/color_black1"
                android:textSize="@dimen/medium_text_size2" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/drag_start_price_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_car_fee_service2"
                android:textColor="@color/color_black1"
                android:textSize="@dimen/medium_text_size2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_car_fee_service3"
                android:textColor="@color/color_black1"
                android:textSize="@dimen/medium_text_size2" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/drag_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_car_fee_service4"
                android:textColor="@color/color_black1"
                android:textSize="@dimen/medium_text_size2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_car_fee_service5"
                android:textColor="@color/color_black1"
                android:textSize="@dimen/medium_text_size2" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/out_of_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_rmb_s"
                android:textColor="@color/color_black1"
                android:textSize="@dimen/medium_text_size2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/drag_real_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_car_fee_real"
                android:textColor="@color/color_black1"
                android:textSize="@dimen/medium_text_size2" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/drag_real_price2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_car_fee_service2"
                android:textColor="@color/color_black1"
                android:textSize="@dimen/medium_text_size2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/baoxian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_baoxian"
                android:textColor="@color/color_black1"
                android:textSize="@dimen/medium_text_size2" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/baoxian_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_car_fee_service2"
                android:textColor="@color/color_black1"
                android:textSize="@dimen/medium_text_size2" />
        </LinearLayout>
        <Button
            android:visibility="visible"
            android:id="@+id/sure_free"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_shape_second_green"
            android:gravity="center"
            android:onClick="onDown"
            android:text="@string/label_sure_fee"
            android:textColor="@color/color_white"
            android:textSize="@dimen/medium_text_size1" />
    </LinearLayout>
    <View
        android:visibility="visible"
        android:id="@+id/empty_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/color_gray2"
        />

    <include
        android:id="@+id/progressBar"
        layout="@layout/progressbar_layout"
        android:visibility="visible" />

</RelativeLayout>
