<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
     tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/color_white"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="44.5dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/label_fee"
            android:textColor="@color/color_black"
            android:textSize="@dimen/large_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_line" />
        </RelativeLayout>
    <com.baidu.mapapi.map.MapView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:clickable="true"
        android:id="@+id/bmapView"

        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/title_layout" />
    <LinearLayout
        android:background="@color/color_gray3"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <RelativeLayout
            android:layout_marginTop="15dp"
            android:paddingLeft="23dp"
            android:paddingRight="23dp"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:layout_marginBottom="13dp"
                android:textColor="@color/color_black2"
                android:textSize="15sp"
                android:text="@string/hint_type_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_alignBottom="@+id/drap_distance"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView

                android:gravity="bottom"
                android:id="@+id/drap_distance"
                android:textSize="60sp"
                android:text="0.00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/kilometer"
                android:layout_toStartOf="@+id/kilometer" />

            <TextView
                android:id="@+id/kilometer"
                android:textColor="@color/color_black2"
                android:layout_marginLeft="5dp"
                android:textSize="15sp"
                android:text="@string/label_kilometre_drag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>



        <Button
            android:onClick="startDrag"
            android:id="@+id/btn_drop_arrive"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_btn_green"
            android:gravity="center"
            android:text="@string/label_carDrag_start"
            android:textColor="@color/color_white"
            android:textSize="@dimen/medium_text_size1" />

    </LinearLayout>
    <include
        android:id="@+id/drag_map_include"
        layout="@layout/progressbar_layout"
        android:visibility="visible" />

    <TextView
        android:id="@+id/repain"
        android:visibility="gone"
        android:text="@string/msg_drag_repain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drag_map_include"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
