<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:onClick="onDismiss">

    <RelativeLayout
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/color_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/label_login"
            android:textColor="@color/color_black"
            android:textSize="@dimen/large_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_line" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/logo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_layout"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo2"/>
    </LinearLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/logo_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_shape_white"
        android:gravity="center_vertical"
        android:hint="@string/hint_phone"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/color_black"
        android:textColorHint="@color/color_gray"
        android:textSize="@dimen/medium_text_size2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_shape_white"
        android:gravity="center_vertical"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/color_black"
        android:textColorHint="@color/color_gray"
        android:textSize="@dimen/medium_text_size2" />


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn_green"
        android:gravity="center"
        android:onClick="onLogin"
        android:text="@string/label_login"
        android:textColor="@color/color_white"
        android:textSize="@dimen/medium_text_size1" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/color_gray"
        android:textSize="@dimen/medium_text_size3" />

    <TextView
        android:id="@+id/telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/color_gray"
        android:textSize="@dimen/medium_text_size3" />


    <include layout="@layout/progressbar_layout" />

</RelativeLayout>
